@@ -1,3 +1,6 @@
+Plus1 WapStart Android SDK 2.3.4, 2015-03-12
+- Do not allow WebView to access sensitive local resource through file scheme
+
 Plus1 WapStart Android SDK 2.3.3, 2014-12-03
 - Workaround for multiple calls of WebViewClient.onPageFinished(), see
   https://codereview.chromium.org/68763012/ for details
